# Best-Deals-via-C-

./: .gitignore  CMakeLists.txt  oauth_redirect_server  oauth_redirect_server.cpp  scraper.cpp  vcpkg.json
core/: package-lock.json  package.json
core/config/: eslint.config.js  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
core/src/: App.tsx  custom.d.ts  index.css  main.tsx
core/src/components/sharedFilters/: AreaBar.tsx  Min-Max.tsx  SearchBar.tsx  SearchFilter.tsx  submit.tsx
core/src/components/sharedFilters/styling/: Min-Max.css  sharedComponents.css
core/src/pages/errorPage/: errorPage.css  errorPage.tsx
core/src/pages/individualPage/: core_individualPage.tsx
core/src/pages/individualPage/styling/: individualPage.css
core/src/pages/mainPage/: core_mainPage.tsx
core/src/pages/mainPage/styling/: core_mainPage.css
core/src/pages/resultsPage/: core_resultsPage.tsx  header.tsx  resultItem.tsx
core/src/pages/resultsPage/styling/: header.css  item.css
core/src/style/css-particle-animation-no-javascript/: ParticleBackground.jsx
core/src/style/css-particle-animation-no-javascript/src/: style.css  style.css.map  style.scss  style.scss.map
